Fixed padding issue on small screens

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 body {
-  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,11 +19,8 @@ body {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  width: 40%;
+  min-width: 450px;
 }
 
 /* Modal Content/Box */
@@ -34,6 +30,20 @@ body {
   padding: 20px;
   border: 3px solid black;
   width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.modal-data {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.modal-header {
+  width: 25%;
+}
+
+.modal-info {
+  text-align: left;
 }
 
 /* The Close Button */
@@ -49,28 +59,21 @@ body {
   color: black;
 } 
 
-h1 {
-  min-width: 250px;
-  width: 80%;
-}
-
 .wrapper {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   flex-wrap: wrap;
   width: 80%;
   min-width: 400px;
-  max-width: 700px;
-  margin-top: 50px;
 }
 
 .wrapper > * {
   border: 3px solid black;
-  border-radius: 10px;
   background-color: lightgray;
-  margin: 10px;
-  padding: 10px;
-  min-width: 130px;
+  margin: 5px;
+  width: 25%;
+  min-width: 150px;
 }
 
 .img {
